--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Validate Project
-        run: echo "All tests passed ✅"
+        run: echo "All tests passed from main Branch✅"
